Added Github URL

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -93,6 +93,9 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
 MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMWNXKOxolc:::::oXMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
 </div>
 				</section>
+				</section>
+				<section>
+					<a href="https://github.com/dcandre/instafacefam" target="keyhole">github.com/dcandre/instafacefam</a>
 				</section>	
 				<section>
 					<h3>What are we doing here?</h3>
@@ -204,7 +207,9 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
 				<section>
 					<h2>Derek Andre</h2>
 					<h4>Software Consultant and Certified Azure Developer</h4>
-					<br />						
+					<br />				
+					<a href="https://github.com/dcandre/instafacefam" target="keyhole">github.com/dcandre/instafacefam</a>
+					<br />		
 					<div><a href="https://keyholesoftware.com" target="keyhole">keyholesoftware.com</a></div>
 				</section>
 			</div>
